--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "npm run build --base-href=https://ravitejavattem.github.io/sample-file-upload/"
   },
   "dependencies": {
     "@angular/animations": "^15.1.2",
