--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "deploy": "ng build --base-href=https://ravitejavattem.github.io/sample-file-upload/"
   },
   "dependencies": {
-    "@angular/animations": "^15.1.2",
+    "@angular/animations": "15.1.2",
     "@angular/cdk": "15.2.6",
-    "@angular/common": "^15.1.2",
-    "@angular/compiler": "^15.1.2",
-    "@angular/core": "^15.1.2",
-    "@angular/forms": "^15.1.2",
-    "@angular/material": "^15.2.6",
-    "@angular/platform-browser": "^15.1.2",
-    "@angular/platform-browser-dynamic": "^15.1.2",
-    "@angular/router": "^15.1.2",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.5.0",
-    "zone.js": "^0.12.0"
+    "@angular/common": "15.1.2",
+    "@angular/compiler": "15.1.2",
+    "@angular/core": "15.1.2",
+    "@angular/forms": "15.1.2",
+    "@angular/material": "15.2.6",
+    "@angular/platform-browser": "15.1.2",
+    "@angular/platform-browser-dynamic": "15.1.2",
+    "@angular/router": "15.1.2",
+    "rxjs": "7.8.0",
+    "tslib": "2.5.0",
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.0",
-    "@angular/cli": "^15.1.0",
-    "@angular/compiler-cli": "^15.1.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2"
+    "@angular-devkit/build-angular": "15.1.0",
+    "@angular/cli": "15.1.0",
+    "@angular/compiler-cli": "15.1.0",
+    "@types/jasmine": "4.0.0",
+    "jasmine-core": "4.1.0",
+    "karma": "6.3.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.0.0",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "typescript": "4.7.2"
   }
 }
